SFDCProject/src/objects/NE_Partner_Parent_Certification__c.object
<CustomObject>
    <description>NE Partner Parent Certification</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NE Partner Parent Certifications</relationshipLabel>
        <relationshipName>NE_Partner_Parent_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Completed Date</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NE Partner Parent Certifications</relationshipLabel>
        <relationshipName>NE_Partner_Parent_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrolled_Date__c</fullName>
        <description>Enrolled Date</description>
        <label>Enrolled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Certification_ID__c</fullName>
        <description>Parent Certification ID</description>
        <label>Parent Certification ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Certification_Score__c</fullName>
        <description>Parent Certification Score</description>
        <label>Parent Certification Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parent_Certification_Status__c</fullName>
        <description>Parent Certification Status</description>
        <label>Parent Certification Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Certification</description>
        <label>Parent Certification</label>
        <referenceTo>NE_Parent_Certification__c</referenceTo>
        <relationshipLabel>NE Partner Parent Certifications</relationshipLabel>
        <relationshipName>NE_Partner_Parent_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_Completion__c</fullName>
        <description>Percentage Completion</description>
        <label>Percentage Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>NE Partner Parent Certification</label>
    <nameField>
        <displayFormat>NPC-{0000000000}</displayFormat>
        <label>NE-Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NE Partner Parent Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>